- Added support for Vert.x 2.1

--- a/templates/default/logging_properties.erb
+++ b/templates/default/logging_properties.erb
@@ -22,7 +22,7 @@ java.util.logging.FileHandler.level=INFO
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 
 # Put the log in the system temporary directory
-java.util.logging.FileHandler.pattern=/srv/logs/vertx.log
+java.util.logging.FileHandler.pattern=/srv/log/vertx.log
 
 .level=INFO
 org.vertx.level=INFO
