--- a/templates/default/vertx_runlevel.erb
+++ b/templates/default/vertx_runlevel.erb
@@ -43,7 +43,8 @@ else
   fi
 fi
 
-STATUS_FILE=/var/www/monitor/status.txt
+STATUS_FILE=<%= node[:status_file] %>
+PID_FILE=<%= node[:pid_file] %>
 
 case "$1" in
      start)
@@ -65,6 +66,7 @@ case "$1" in
           $SUBIT "$START_SCRIPT" > /srv/log/console.log &
           $SUBIT "echo ONLINE > $STATUS_FILE"
         fi
+        echo `ps awwx | grep "vertx.java.platform" | grep -v grep | awk '{print $1}'` > $PID_FILE
     ;;
     stop)
         echo "Stopping Vert.x 2.1.0"
@@ -83,6 +85,9 @@ case "$1" in
             $SUBIT "echo OFFLINE > $STATUS_FILE"
             $SUBIT "$STOP_SCRIPT" > /srv/log/console.log &
           fi
+        fi
+        if [ -f $PID_FILE ]; then
+          rm -f $PID_FILE
         fi
     ;;
     status)
