--- a/templates/default/vertx_config.erb
+++ b/templates/default/vertx_config.erb
@@ -9,5 +9,5 @@ JAVA_OPTS="$JAVA_OPTS -Dstage=<%= node.chef_environment %>"
 JAVA_OPTS="$JAVA_OPTS -Dcom.sun.management.jmxremote.port=5566"
 JAVA_OPTS="$JAVA_OPTS -Dcom.sun.management.jmxremote.authenticate=true"
 JAVA_OPTS="$JAVA_OPTS -Dcom.sun.management.jmxremote.ssl=false"
-JAVA_OPTS="$JAVA_OPTS -Dcom.sun.management.jmxremote.password.file=<%= node[:dir] %>/vertx/conf/jmxremote.password"
-JAVA_OPTS="$JAVA_OPTS -Dcom.sun.management.jmxremote.access.file=<%= node[:dir] %>/vertx/conf/jmxremote.access"
+JAVA_OPTS="$JAVA_OPTS -Dcom.sun.management.jmxremote.password.file=<%= node[:vertx][:home] %>/conf/jmxremote.password"
+JAVA_OPTS="$JAVA_OPTS -Dcom.sun.management.jmxremote.access.file=<%= node[:vertx][:home] %>/conf/jmxremote.access"
