--- a/templates/default/vertx_runlevel.erb
+++ b/templates/default/vertx_runlevel.erb
@@ -48,28 +48,28 @@ PID_FILE=<%= node[:pid_file] %>
 
 case "$1" in
      start)
-        echo "Starting Vert.x <%= node[:version] %>"
+        echo "Starting Vert.x <%= node[:vertx][:version] %>"
         if [ -z "$VERTX_MODULE" ]; then
           exit 0
         fi
         <% if node[:platform_family] == "debian" -%>
-        START_SCRIPT="authbind <%= node[:dir] %>/vertx/bin/vertx runzip <%= node[:dir] %>/deploy/packages/$VERTX_MODULE"
+        START_SCRIPT="authbind <%= node[:vertx][:home] %>/bin/vertx runzip <%= node[:vertx][:home] %>/deploy/packages/$VERTX_MODULE"
         <% else %>
-        START_SCRIPT="<%= node[:dir] %>/vertx/bin/vertx runzip <%= node[:dir] %>/deploy/packages/$VERTX_MODULE"
+        START_SCRIPT="<%= node[:vertx][:home] %>/bin/vertx runzip <%= node[:vertx][:home] %>/deploy/packages/$VERTX_MODULE"
         <% end %>
         if [ -z "$SUBIT" ]; then
-          $START_SCRIPT > <%= node[:log_dir] %>/console.log &
+          $START_SCRIPT > <%= node[:vertx][:log_dir] %>/console.log &
           echo ONLINE > $STATUS_FILE
         else
-          touch <%= node[:log_dir] %>/console.log
-          chown vertx:vertx <%= node[:log_dir] %>/console.log
-          $SUBIT "$START_SCRIPT" > <%= node[:log_dir] %> &
+          touch <%= node[:vertx][:log_dir] %>/console.log
+          chown vertx:vertx <%= node[:vertx][:log_dir] %>/console.log
+          $SUBIT "$START_SCRIPT" > <%= node[:vertx][:log_dir] %> &
           $SUBIT "echo ONLINE > $STATUS_FILE"
         fi
         echo `ps awwx | grep "vertx.java.platform" | grep -v grep | awk '{print $1}'` > $PID_FILE
     ;;
     stop)
-        echo "Stopping Vert.x <%= node[:version] %>"
+        echo "Stopping Vert.x <%= node[:vertx][:version] %>"
         if [ -z "$VERTX_MODULE" ]; then
           exit 0
         fi
@@ -78,12 +78,12 @@ case "$1" in
           STOP_SCRIPT="kill $PID"
           if [ -z "$SUBIT" ]; then
             echo OFFLINE > $STATUS_FILE
-            $STOP_SCRIPT > <%= node[:log_dir] %>/console.log &
+            $STOP_SCRIPT > <%= node[:vertx][:log_dir] %>/console.log &
           else
-            touch <%= node[:log_dir] %>/console.log
-            chown vertx:vertx <%= node[:log_dir] %>/console.log
+            touch <%= node[:vertx][:log_dir] %>/console.log
+            chown vertx:vertx <%= node[:vertx][:log_dir] %>/console.log
             $SUBIT "echo OFFLINE > $STATUS_FILE"
-            $SUBIT "$STOP_SCRIPT" > <%= node[:log_dir] %>/console.log &
+            $SUBIT "$STOP_SCRIPT" > <%= node[:vertx][:log_dir] %>/console.log &
           fi
         fi
         if [ -f $PID_FILE ]; then
@@ -91,8 +91,8 @@ case "$1" in
         fi
     ;;
     status)
-        echo "Status of Vert.x <%= node[:version] %>"
-        STATUS_SCRIPT="<%= node[:dir] %>/vertx/bin/vertx_status"
+        echo "Status of Vert.x <%= node[:vertx][:version] %>"
+        STATUS_SCRIPT="<%= node[:vertx][:home] %>/bin/vertx_status"
         if [ -z "$SUBIT" ]; then
             $STATUS_SCRIPT
             RETVAL=$?
@@ -104,7 +104,7 @@ case "$1" in
         exit $RETVAL
     ;;
     restart)
-        echo "Stopping Vert.x <%= node[:version] %>"
+        echo "Stopping Vert.x <%= node[:vertx][:version] %>"
         if [ -z "$VERTX_MODULE" ]; then
           exit 0
         fi
@@ -113,34 +113,34 @@ case "$1" in
           STOP_SCRIPT="kill $PID"
           if [ -z "$SUBIT" ]; then
             echo OFFLINE > $STATUS_FILE
-            $STOP_SCRIPT > <%= node[:log_dir] %>/console.log &
+            $STOP_SCRIPT > <%= node[:vertx][:log_dir] %>/console.log &
           else
-            touch <%= node[:log_dir] %>/console.log
-            chown vertx:vertx <%= node[:log_dir] %>/console.log
+            touch <%= node[:vertx][:log_dir] %>/console.log
+            chown vertx:vertx <%= node[:vertx][:log_dir] %>/console.log
             $SUBIT "echo OFFLINE > $STATUS_FILE"
-            $SUBIT "$STOP_SCRIPT" > <%= node[:log_dir] %>/console.log &
+            $SUBIT "$STOP_SCRIPT" > <%= node[:vertx][:log_dir] %>/console.log &
           fi
         fi
 
         sleep 5
 
-        echo "Starting Vert.x <%= node[:version] %>"
+        echo "Starting Vert.x <%= node[:vertx][:version] %>"
         if [ -z "$VERTX_MODULE" ]; then
           exit 0
         fi
         <% if node[:platform_family] == "debian" -%>
-        START_SCRIPT="authbind <%= node[:dir] %>/vertx/bin/vertx runzip <%= node[:dir] %>/deploy/packages/$VERTX_MODULE"
+        START_SCRIPT="authbind <%= node[:vertx][:home] %>/bin/vertx runzip <%= node[:vertx][:home] %>/deploy/packages/$VERTX_MODULE"
         <% else %>
-        START_SCRIPT="<%= node[:dir] %>/vertx/bin/vertx runzip <%= node[:dir] %>/deploy/packages/$VERTX_MODULE"
+        START_SCRIPT="<%= node[:vertx][:home] %>/bin/vertx runzip <%= node[:vertx][:home] %>/deploy/packages/$VERTX_MODULE"
         <% end %>
         if [ -z "$SUBIT" ]; then
-          $START_SCRIPT > <%= node[:log_dir] %>/console.log &
+          $START_SCRIPT > <%= node[:vertx][:log_dir] %>/console.log &
           echo ONLINE > $STATUS_FILE
         else
-          touch <%= node[:log_dir] %>/console.log
-          chown vertx:vertx <%= node[:log_dir] %>/console.log
+          touch <%= node[:vertx][:log_dir] %>/console.log
+          chown vertx:vertx <%= node[:vertx][:log_dir] %>/console.log
           $SUBIT "echo OFFLINE > $STATUS_FILE"
-          $SUBIT "$STOP_SCRIPT" > <%= node[:log_dir] %>/console.log &
+          $SUBIT "$STOP_SCRIPT" > <%= node[:vertx][:log_dir] %>/console.log &
         fi
     ;;
     *)
